--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,118 @@
   text-align: center;
 }
 
+.home {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+}
 
+.card {
+  background-color: rgba(255, 255, 255, 0.4);
+  box-shadow: -0rem -0rem 0.5rem 0.8rem rgba(255, 255, 255, 0.6);
+  border: 0.1rem solid black;
+  padding: 2rem;
+}
 
+.card button {
+  height: 4rem;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: larger;
+}
 
+.cell {
+  /* background: black; */
+}
+
+.food {
+  background-color: red;
+  border-radius: 50%;
+  border: 2px solid black;
+}
+
+#board {
+  background: rgba(255, 255, 255, 0.7);
+  border: 0.2rem solid gold;
+  box-sizing: content-box;
+  box-shadow: 0rem 0rem 5rem rgba(255, 215, 0, 1);
+}
+
+.snakehead {
+  background-color: orange;
+  border-radius: 10px;
+  border: 2px solid black;
+}
+
+.snakebody {
+  background-color: aquamarine;
+  border: 2px solid black;
+  border-radius: 8px;
+}
+
+#finalscore {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background-color: rgba(128, 128, 128, 0.7);
+  height: 100vh;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+}
+
+#finalscore div {
+  background-color: rgba(245, 245, 245, 0.8);
+  border-radius: 10px;
+  padding: 1rem;
+}
+
+.title {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  text-decoration: underline 0.5rem rgb(5, 31, 39);
+  color: yellow;
+  text-shadow: 5px 0px 0px rgba(0, 0, 0, 1);
+}
+
+.title::first-letter {
+  text-decoration: none;
+  color: rgb(214, 171, 64);
+  font-size: 4rem;
+  text-shadow: 0.4rem 0.1rem 0rem rgba(255, 0, 0, 0.7);
+}
+
+.card button {
+  background-color: rgba(128, 128, 128, 0.4);
+}
+
+video {
+  background-size: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
+}
+
+.score {
+  background-color: rgba(0, 0, 0, 0.7);
+  width: max-content;
+  border-radius: 1rem;
+  color: whitesmoke;
+}
+
+.right {
+  border-radius: 0px 50% 50% 0px;
+}
+.left {
+  border-radius: 50% 0px 0px 50% ;
+}
+.up {
+  border-radius: 50% 50% 0px 0px;
+}
+.down {
+  border-radius: 0px 0px 50% 50%;
+}
