--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,27 @@
 .board{
-  
-  border: 2px solid black;
+  width: 400px;
+  height: 400px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+
+}
+.spin{
+  border: 5px solid black;
+  border-radius: 50%;
+
+}
+img{
+  margin-left: 18px;
+  width: 350px;
+  height: 350px;
+  border-radius: 50%;
+}
+.triangle{
+  width: 0px;
+  height: 0px;
+  border-top: 100px solid red;
+  border-left: 100px solid blue;
+  border-right: 100px solid green;
 }
